erDiagram
    USERS {
        int user_id PK
        string email
        string password_hash
        string first_name
        string last_name
        string phone
        datetime created_at
        datetime updated_at
    }
    
    ADDRESSES {
        int address_id PK
        int user_id FK
        string address_line1
        string address_line2
        string city
        string state
        string postal_code
        string country
        boolean is_default
        datetime created_at
        datetime updated_at
    }
    
    CATEGORIES {
        int category_id PK
        string name
        string description
        int parent_category_id FK
        datetime created_at
        datetime updated_at
    }
    
    PRODUCTS {
        int product_id PK
        string name
        string description
        decimal price
        int stock_quantity
        string sku
        boolean is_active
        datetime created_at
        datetime updated_at
    }
    
    PRODUCT_CATEGORIES {
        int product_id PK, FK
        int category_id PK, FK
    }
    
    PRODUCT_IMAGES {
        int image_id PK
        int product_id FK
        string image_url
        boolean is_primary
        int display_order
        datetime created_at
    }
    
    CARTS {
        int cart_id PK
        int user_id FK
        datetime created_at
        datetime updated_at
    }
    
    CART_ITEMS {
        int cart_item_id PK
        int cart_id FK
        int product_id FK
        int quantity
        decimal price_at_addition
        datetime added_at
    }
    
    ORDERS {
        int order_id PK
        int user_id FK
        int shipping_address_id FK
        int billing_address_id FK
        decimal subtotal
        decimal tax
        decimal shipping_cost
        decimal total_amount
        string status
        string payment_status
        datetime created_at
        datetime updated_at
    }
    
    ORDER_ITEMS {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal price_at_purchase
        decimal subtotal
        datetime created_at
    }
    
    PAYMENTS {
        int payment_id PK
        int order_id FK
        string payment_method
        string transaction_id
        decimal amount
        string status
        datetime payment_date
    }
    
    REVIEWS {
        int review_id PK
        int product_id FK
        int user_id FK
        int rating
        string comment
        datetime created_at
        datetime updated_at
    }
    
    WISHLISTS {
        int wishlist_id PK
        int user_id FK
        string name
        datetime created_at
        datetime updated_at
    }
    
    WISHLIST_ITEMS {
        int wishlist_id PK, FK
        int product_id PK, FK
        datetime added_at
    }
    
    DISCOUNTS {
        int discount_id PK
        string code
        string description
        decimal amount
        string discount_type
        int usage_limit
        int times_used
        datetime valid_from
        datetime valid_to
        boolean is_active
        datetime created_at
        datetime updated_at
    }
    
    PRODUCT_DISCOUNTS {
        int product_id PK, FK
        int discount_id PK, FK
    }

    USERS ||--o{ ADDRESSES : has
    USERS ||--o{ CARTS : has
    USERS ||--o{ ORDERS : places
    USERS ||--o{ REVIEWS : writes
    USERS ||--o{ WISHLISTS : has
    
    CATEGORIES ||--o{ PRODUCT_CATEGORIES : categorizes
    CATEGORIES ||--o{ CATEGORIES : "parent of"
    
    PRODUCTS ||--o{ PRODUCT_CATEGORIES : belongs_to
    PRODUCTS ||--o{ PRODUCT_IMAGES : has
    PRODUCTS ||--o{ CART_ITEMS : added_to
    PRODUCTS ||--o{ ORDER_ITEMS : purchased_in
    PRODUCTS ||--o{ REVIEWS : receives
    PRODUCTS ||--o{ WISHLIST_ITEMS : added_to
    PRODUCTS ||--o{ PRODUCT_DISCOUNTS : discounted_by
    
    CARTS ||--o{ CART_ITEMS : contains
    
    ORDERS ||--o{ ORDER_ITEMS : contains
    ORDERS ||--o{ PAYMENTS : paid_with
    
    WISHLISTS ||--o{ WISHLIST_ITEMS : contains
    
    DISCOUNTS ||--o{ PRODUCT_DISCOUNTS : applies_to